--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Christian Glahn <phish@mobinaut.io>",
   "license": "MIT",
   "dependencies": {
-    "babel-eslint": "^8.2.2",
     "debug": "^3.1.0",
-    "eslint": "^4.16.0",
     "ldapjs": "^1.0.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1"
   }
 }
